--- a/ProjetTaghtyMobile/ProjetTaghtyMobile/ProjetTaghtyMobile.csproj
+++ b/ProjetTaghtyMobile/ProjetTaghtyMobile/ProjetTaghtyMobile.csproj
@@ -11,7 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\Accueil.xaml">
+    <Compile Update="Apps.xaml.cs">
+      <DependentUpon>Apps.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\test.xaml.cs">
+      <DependentUpon>test.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\test.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
